<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#304769"

    android:gravity="center"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:srcCompat="@tools:sample/avatars" />

            <EditText
                android:id="@+id/caja_num_control"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/hint_numero_control"
                android:padding="10dp" />

            <EditText
                android:id="@+id/caja_nombre_alumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/hint_nombre_alumno"
                android:padding="10dp" />

            <EditText
                android:id="@+id/caja_primer_ap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/hint_primer_ap"
                android:padding="10dp" />

            <EditText
                android:id="@+id/caja_segundo_ap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/hint_segundo_ap"
                android:padding="10dp" />

            <EditText
                android:id="@+id/caja_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/hint_edad"
                android:padding="10dp" />

            <EditText
                android:id="@+id/caja_semestre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/hint_semestre"
                android:padding="10dp" />

            <EditText
                android:id="@+id/caja_carrera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/hint_carrera"
                android:padding="10dp" />

            <Button
                android:id="@+id/btn_eliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="registrarAlumno"
                android:text="@string/txt_btn_agregar" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>